--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "main": "dist/bundle.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "deploy": "ibmcloud fn action update security-advisor-notifier dist/bundle.js --kind nodejs:10"
+    "deploy": "ibmcloud fn action update security-advisor-notifier dist/bundle.js --kind nodejs:10 --web true"
   },
   "dependencies": {
     "axios": "^0.19.0",
     "jsonwebtoken": "^8.5.1",
-    "log4js": "^4.4.0"
+    "log4js": "^4.4.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "webpack": "^3.8.1"
