--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   },
   "dependencies": {
     "axios": "^0.19.0",
+    "date-and-time": "^0.14.1",
     "jsonwebtoken": "^8.5.1",
     "log4js": "^4.4.0",
-    "request": "^2.88.0"
+    "request": "^2.88.0",
+    "node-rdkafka": "2.9.1"
   },
   "devDependencies": {
     "webpack": "^3.8.1"
