--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "main": "dist/bundle.js",
   "scripts": {
     "build": "webpack --config webpack.config.js",
-    "deploy": "ibmcloud fn action update security-advisor-notifier dist/bundle.js --kind nodejs:10 --web true"
+    "deploy": "ibmcloud fn action update security-advisor-notification-webhook dist/bundle.js --kind nodejs:10 --web true"
   },
   "dependencies": {
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-syntax-bigint": "^7.8.3",
     "axios": "^0.19.0",
+    "babel-loader": "^8.1.0",
     "date-and-time": "^0.14.1",
     "jsonwebtoken": "^8.5.1",
+    "kafkajs": "1.14.0",
     "log4js": "^4.4.0",
-    "request": "^2.88.0",
-    "node-rdkafka": "2.9.1"
+    "request": "^2.88.0"
   },
   "devDependencies": {
-    "webpack": "^3.8.1"
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12"
   }
 }
